# ocaml-tensorboard

./: README.md  tensorboard.install  tensorboard.opam
examples/summary/: writer.ml
src/protobuf/: example_pb.ml  example_pb.mli  example_types.ml  example_types.mli  feature_pb.ml  feature_pb.mli  feature_types.ml  feature_types.mli
src/tensorboard/: summary_writer.ml  summary_writer.mli  tf_record.ml  tf_record.mli  tf_record_writer.ml  tf_record_writer.mli
src/tests/: dune  tf_record_tests.ml
