opam-version: "2.0"
name:         "tensorboard"
bug-reports:  "https://github.com/LaurentMazare/ocaml-tensorboard/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-tensorboard"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-tensorboard.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

depends: [
  "base" {>= "0.11.0"}
  "bigstringaf"
  "stdio"
  "ocaml" {>= "4.06"}
  "dune" {build}
]

depopts: [
]

conflicts: [
]
